--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "modern-normalize": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-loader-spinner": "^5.3.4",
+    "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.2",
     "styled-components": "^5.3.10",
     "web-vitals": "^2.1.4"
   },
